--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-next": "14.1.4",
     "node-sass-glob-importer": "^5.3.3",
     "sass": "^1.72.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "winston": "^3.13.0"
   }
 }
