--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
@@ -39,7 +40,6 @@
     "eslint-config-next": "14.1.4",
     "node-sass-glob-importer": "^5.3.3",
     "sass": "^1.72.0",
-    "typescript": "^5",
-    "winston": "^3.13.0"
+    "typescript": "^5"
   }
 }
