features: add site footer

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
 engine-strict = true
+
+# To fix a bug in WSL2 https://youtrack.jetbrains.com/issue/WEB-49919/WSL2-Packages-installed-using-pnpm-not-detected#focus=Comments-27-5689628.0-0
+node-linker = hoisted
