--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.2.0",
+    "cookies-next": "^4.1.1",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "next": "14.1.4",
