feat: migrate to Bun package manager and optimize GraphQL codegen workflow

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "optimizely-next",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "bun run codegen && concurrently \"bun run codegen:watch\" \"next dev\"",
+    "dev:no-watch": "bun run codegen && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --require dotenv/config --config graphql.config.ts dotenv_config_path=.env.local"
+    "codegen": "graphql-codegen --require dotenv/config --config graphql.config.ts dotenv_config_path=.env.local",
+    "codegen:watch": "graphql-codegen --require dotenv/config --config graphql.config.ts dotenv_config_path=.env.local --watch"
   },
   "engines": {
     "node": "20.x"
@@ -30,11 +32,13 @@
     "@graphql-codegen/typescript-graphql-files-modules": "^3.0.0",
     "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@parcel/watcher": "^2.5.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "bootstrap": "^5.1.3",
+    "concurrently": "^9.2.0",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
