--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 .pnp.js
 .yarn/install-state.gz
 
+# lockfiles from other package managers (we use Bun)
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
 # testing
 /coverage
 
@@ -34,6 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# GraphQL generated files
+*.gql.g.ts
 
 # logger 
 #/src/logger/*.log
